src/objects/Lease_Adjustment_Table__c.object
<CustomObject>
    <fields>
        <fullName>Community_Program_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Program Offer</label>
        <referenceTo>Community_Program_Offer__c</referenceTo>
        <relationshipLabel>Lease Adjustment Table</relationshipLabel>
        <relationshipName>Lease_Adjustment_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Down_Payment_Mutiplier__c</fullName>
        <label>Down Payment Mutiplier</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalator_Adjustment__c</fullName>
        <label>Escalator Adjustment</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Escalator_Value__c</fullName>
        <label>Escalator Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lease_Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Fund</label>
        <referenceTo>Lease_Fund__c</referenceTo>
        <relationshipLabel>Lease Adjustment Table</relationshipLabel>
        <relationshipName>Lease_Adjustment_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maximum_Size__c</fullName>
        <label>Maximum Size</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Size__c</fullName>
        <label>Minimum Size</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Region</label>
        <referenceTo>Pricing_Region__c</referenceTo>
        <relationshipLabel>Lease Adjustment Table</relationshipLabel>
        <relationshipName>Lease_Adjustment_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SQ_Adjustment_Type__c</fullName>
        <label>SQ Adjustment Type</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SQ_Threshold_1_Adjustment__c</fullName>
        <label>SQ Threshold 1 Adjustment</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SQ_Threshold_1__c</fullName>
        <label>SQ Threshold 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SQ_Threshold_2_Adjustment__c</fullName>
        <label>SQ Threshold 2 Adjustment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SQ_Threshold_2__c</fullName>
        <label>SQ Threshold 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TX</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TSRF_Adjustment_Threshold__c</fullName>
        <label>TSRF Adjustment Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TSRF_Adjustment__c</fullName>
        <label>TSRF Adjustment</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TSRF_Lower_Bound_Adjustment__c</fullName>
        <label>TSRF Lower Bound Adjustment</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TSRF_Lower_Bound__c</fullName>
        <label>TSRF Lower Bound</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Utility_Adder__c</fullName>
        <label>Utility Adder</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Utility_Company_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utility Company Master</label>
        <referenceTo>Utility_Company_master__c</referenceTo>
        <relationshipLabel>Lease Adjustment Table</relationshipLabel>
        <relationshipName>Lease_Adjustment_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Utility_Multiplier__c</fullName>
        <label>Utility Multiplier</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utility_Threshold__c</fullName>
        <label>Utility Threshold</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Utility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Utility_Company__c.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Custom</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Utility_Company__c</referenceTo>
        <relationshipLabel>Lease Adjustment Table</relationshipLabel>
        <relationshipName>Lease_Adjustment_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lease Adjustment Table</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LAT-{000000}</displayFormat>
        <label>Lease Adjustment Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Adjustment Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>